# nav2_time_aware_controller

./: CMakeLists.txt  README.md  control_loop.cpp  debug.cpp  lqr_math.cpp  package.xml  path_utils.cpp  plugins.xml  time_logic.cpp  timed_waypoint_runner.cpp  timed_waypoints.yaml
config/: nav2.yaml  timed_waypoints.yaml
include/nav2_time_aware_controller/: controller_types.hpp  controller_utils.hpp  time_aware_lqr_controller.hpp
src/: control_loop.cpp  lifecycle.cpp  safety_limits.cpp  time_aware_lqr_controller.cpp  time_logic.cpp  timed_waypoint_runner.cpp
